--- a/index.html
+++ b/index.html
@@ -6,9 +6,141 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Foodie</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+
+
+
+
+
+    <div id="box">
+
+
+        <ul type="none">
+
+            <li><a href="">Home</a></li>
+            <li><a href="">Menu</a></li>
+            <li><a href="">Order</a></li>
+            <li><a href="">Blog</a></li>
+            <li><a href="">Reviews</a></li>
+
+
+        </ul>
+
+
+    </div>
+
+
+    <div id="heading">
+
+        <h1>FOODIE____Your Best Choice</h1>
+
+    </div>
+
+
+
+    <section id="first">
+
+
+        <div class="half-width">
+
+            <h2>Get The Best Food By </h2>
+            <h1>Foodie</h1>
+            <br>
+            <br>
+            <br>
+            <P>Now,Foodie is in Bangladesh.Our slogan is"Never Compromise With Quality."You are most welcome to visit
+                our website for order food.</P>
+
+        </div>
+
+
+        <div class="half-width">
+
+            <img src="eat" alt="eating vegetables">
+
+        </div>
+
+    </section>
+
+
+
+
+    <selection id="about-us">
+
+        <div>
+            <img src="masterchef" alt="masterchef">
+        </div>
+
+        <div>
+
+            <h2>About Us</h2>
+            <p>We are a multinational online food delevery company.We always tries to satisfy our client.Our service
+                level is very high.We delever food within 30 minutes any where in Bangladesh.</p>
+
+        </div>
+
+    </selection>
+
+
+
+
+    <section>
+
+
+        <h2>Our Recipies</h2>
+        <p>We have Deshi,Indian,Thai,Chainese,italian etc in our menu.There are many food items of different
+            taste,spice.So,let's taste it.</p>
+
+        <div id="item">
+            <div class="recipies">
+
+                <img src="Project Cover.jpg" alt="">
+
+
+            </div>
+
+
+            <div class="recipies">
+
+                <img src="Project Cover1.jpg" alt="">
+
+
+            </div>
+
+
+            <div class="recipies">
+
+                <img src="Project Cover.png" alt="">
+
+
+            </div>
+
+        </div>
+
+
+
+
+
+    </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 </body>
 
