--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
         <div class="half-width">
 
-            <img src="eat" alt="eating vegetables">
+            <img src="young-guy-holding-fresh-burger_79782-176-removebg-preview.png" alt="eating burger">
 
         </div>
 
@@ -70,11 +70,11 @@
 
     <selection id="about-us">
 
-        <div>
-            <img src="masterchef" alt="masterchef">
+        <div class="half-width">
+            <img src="Person Image.png" alt="person">
         </div>
 
-        <div>
+        <div class="half-width">
 
             <h2>About Us</h2>
             <p>We are a multinational online food delevery company.We always tries to satisfy our client.Our service
@@ -98,7 +98,9 @@
             <div class="recipies">
 
                 <img src="Project Cover.jpg" alt="">
-
+                <br>
+                <h3>Recipie Num 1</h3>
+                <p>This is very testy.This is very much sweet.</p>
 
             </div>
 
@@ -106,6 +108,10 @@
             <div class="recipies">
 
                 <img src="Project Cover1.jpg" alt="">
+                <br>
+                <h3>Recipie Num 2</h3>
+                <p>This recipie is made with vegetables.It is very yummy and tasty.</p>
+
 
 
             </div>
@@ -114,6 +120,11 @@
             <div class="recipies">
 
                 <img src="Project Cover.png" alt="">
+                <br>
+                <h3>Recipie Num 3</h3>
+                <p>This is very sweet.It's taste is awesome.</p>
+
+
 
 
             </div>
@@ -126,9 +137,39 @@
 
     </section>
 
+    <br>
+    <br>
+    <br>
 
 
 
+
+
+    <div id="reviws">
+
+        <ul type="none">
+
+            <li>1M+ Customer</li>
+            <li>5M+ Delevery</li>
+            <li>550k+ Reviews</li>
+
+
+
+
+
+        </ul>
+
+
+
+
+
+    </div>
+
+    <br>
+
+
+    <h2>FOODIE</h2>
+    <h4>Eat fresh,be fresh</h4>
 
 
 
