--- a/index.html
+++ b/index.html
@@ -145,32 +145,31 @@
 
 
 
-    <div id="reviws">
+    <section id="reviews">
 
-        <ul type="none">
+        <div>
+            <h2>1M+</h2>
+            <h3>Customer</h3>
+        </div>
 
-            <li>1M+ Customer</li>
-            <li>5M+ Delevery</li>
-            <li>550k+ Reviews</li>
+        <div>
+            <h2>7M+</h2>
+            <h3>Delevery</h3>
+        </div>
 
+        <div>
+            <h2>550K+</h2>
+            <h3>Reviews</h3>
+        </div>
 
-
-
-
-        </ul>
-
-
-
-
-
-    </div>
+    </section>
 
     <br>
 
-
-    <h2>FOODIE</h2>
-    <h4>Eat fresh,be fresh</h4>
-
+    <div id="last">
+        <h2>FOODIE</h2>
+        <h4>Eat fresh,be fresh</h4>
+    </div>
 
 
 
