--- a/index.html
+++ b/index.html
@@ -87,55 +87,50 @@
 
 
 
-    <section>
 
+    <h2>Our Recipies</h2>
+    <p>We have Deshi,Indian,Thai,Chainese,italian etc in our menu.There are many food items of different
+        taste,spice.So,let's taste it.</p>
 
-        <h2>Our Recipies</h2>
-        <p>We have Deshi,Indian,Thai,Chainese,italian etc in our menu.There are many food items of different
-            taste,spice.So,let's taste it.</p>
+    <section id="item">
+        <div class="recipies">
 
-        <div id="item">
-            <div class="recipies">
-
-                <img src="Project Cover.jpg" alt="">
-                <br>
-                <h3>Recipie Num 1</h3>
-                <p>This is very testy.This is very much sweet.</p>
-
-            </div>
-
-
-            <div class="recipies">
-
-                <img src="Project Cover1.jpg" alt="">
-                <br>
-                <h3>Recipie Num 2</h3>
-                <p>This recipie is made with vegetables.It is very yummy and tasty.</p>
-
-
-
-            </div>
-
-
-            <div class="recipies">
-
-                <img src="Project Cover.png" alt="">
-                <br>
-                <h3>Recipie Num 3</h3>
-                <p>This is very sweet.It's taste is awesome.</p>
-
-
-
-
-            </div>
+            <img src="Project Cover.jpg" alt="">
+            <br>
+            <h3>Recipie Num 1</h3>
+            <p>This is very testy.This is very much sweet.</p>
 
         </div>
 
 
+        <div class="recipies">
+
+            <img src="Project Cover1.jpg" alt="">
+            <br>
+            <h3>Recipie Num 2</h3>
+            <p>This recipie is made with vegetables.It is very yummy and tasty.</p>
 
 
+
+        </div>
+
+
+        <div class="recipies">
+
+            <img src="Project Cover.png" alt="">
+            <br>
+            <h3>Recipie Num 3</h3>
+            <p>This is very sweet.It's taste is awesome.</p>
+
+
+
+
+        </div>
 
     </section>
+
+
+
 
     <br>
     <br>
