font-size added

--- a/index.html
+++ b/index.html
@@ -53,9 +53,14 @@
             <br>
             <P>Now,Foodie is in Bangladesh.Our slogan is"Never Compromise With Quality."You are most welcome to visit
                 our website for order food.</P>
+            <br>
+
+            <h2>Order Food</h2>
 
         </div>
 
+
+        <br>
 
         <div class="half-width">
 
@@ -80,6 +85,9 @@
             <p>We are a multinational online food delevery company.We always tries to satisfy our client.Our service
                 level is very high.We delever food within 30 minutes any where in Bangladesh.</p>
 
+            <h2>Contact Us</h2>
+
+
         </div>
 
     </selection>
@@ -87,10 +95,11 @@
 
 
 
-
-    <h2>Our Recipies</h2>
-    <p>We have Deshi,Indian,Thai,Chainese,italian etc in our menu.There are many food items of different
-        taste,spice.So,let's taste it.</p>
+    <div id="our">
+        <h2>Our Recipies</h2>
+        <p>We have Deshi,Indian,Thai,Chainese,italian etc in our menu.There are many food items of different
+            taste,spice.So,let's taste it.</p>
+    </div>
 
     <section id="item">
         <div class="recipies">
