--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 our website for order food.</P>
             <br>
 
-            <h2>Order Food</h2>
+            <h2><a class="link-button" href="" target="blank">Order Food</a></h2>
 
         </div>
 
@@ -82,10 +82,10 @@
         <div class="half-width">
 
             <h2>About Us</h2>
-            <p>We are a multinational online food delevery company.We always tries to satisfy our client.Our service
+            <p>We are a multinational online food delivery company.We always tries to satisfy our client.Our service
                 level is very high.We delever food within 30 minutes any where in Bangladesh.</p>
 
-            <h2>Contact Us</h2>
+            <h2><a class="link-button" href="" target="blank">Contact Us</a></h2>
 
 
         </div>
