--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Foodie</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
-
-
-
 
     <div id="box">
 
@@ -40,7 +41,6 @@
     </div>
 
 
-
     <section id="first">
 
 
@@ -51,14 +51,13 @@
             <br>
             <br>
             <br>
-            <P>Now,Foodie is in Bangladesh.Our slogan is"Never Compromise With Quality."You are most welcome to visit
+            <P>Now,Foodie is in Bangladesh.Our slogan is "Never Compromise With Quality."You are most welcome to visit
                 our website for order food.</P>
             <br>
 
             <h2><a class="link-button" href="" target="blank">Order Food</a></h2>
 
         </div>
-
 
         <br>
 
@@ -72,26 +71,24 @@
 
 
 
-
     <selection id="about-us">
 
         <div class="half-width">
-            <img src="Person Image.png" alt="person">
+            <img src="guy-eats-hot-dog-which-himself-has-prepared-street-food-young-man-blue-shirt-eats-hot-dog-white-background-100449486-removebg-preview.png"
+                alt="person">
         </div>
 
         <div class="half-width">
 
             <h2>About Us</h2>
             <p>We are a multinational online food delivery company.We always tries to satisfy our client.Our service
-                level is very high.We delever food within 30 minutes any where in Bangladesh.</p>
+                level is very high.We deliver food within 30 minutes any where in Bangladesh.</p>
 
             <h2><a class="link-button" href="" target="blank">Contact Us</a></h2>
-
 
         </div>
 
     </selection>
-
 
 
 
@@ -101,12 +98,12 @@
             taste,spice.So,let's taste it.</p>
     </div>
 
-    <section id="item">
+    <div id="item">
         <div class="recipies">
 
             <img src="Project Cover.jpg" alt="">
             <br>
-            <h3>Recipie Num 1</h3>
+            <h3>Jimmy Dean</h3>
             <p>This is very testy.This is very much sweet.</p>
 
         </div>
@@ -116,10 +113,8 @@
 
             <img src="Project Cover1.jpg" alt="">
             <br>
-            <h3>Recipie Num 2</h3>
+            <h3>Meat Jesa</h3>
             <p>This recipie is made with vegetables.It is very yummy and tasty.</p>
-
-
 
         </div>
 
@@ -128,24 +123,17 @@
 
             <img src="Project Cover.png" alt="">
             <br>
-            <h3>Recipie Num 3</h3>
+            <h3>Thai Soup</h3>
             <p>This is very sweet.It's taste is awesome.</p>
-
-
-
 
         </div>
 
-    </section>
-
-
+    </div>
 
 
     <br>
     <br>
     <br>
-
-
 
 
 
@@ -158,7 +146,7 @@
 
         <div>
             <h2>7M+</h2>
-            <h3>Delevery</h3>
+            <h3>Delivery</h3>
         </div>
 
         <div>
@@ -170,21 +158,59 @@
 
     <br>
 
-    <div id="last">
-        <h2>FOODIE</h2>
-        <h4>Eat fresh,be fresh</h4>
+
+
+    <div id="team">
+
+        <h1>Reviews</h1>
+        <h4>Our Valuable Customers</h4>
+
+
     </div>
 
 
+    <section id="customer">
 
 
+        <div>
+
+            <p>Foodie's service is very qualityful</p>
+            <h3>Abdur Rahman</h3>
+
+        </div>
 
 
+        <div>
+
+            <p>I love their foods.This is the best place <br>
+                where I can taste delicious food.</p>
+            <h3>Mahedy Hasan</h3>
+
+        </div>
 
 
+        <div>
+
+            <p>I can't tell you how delicious<br> their food is.
+                Foodie is my best choice</p>
+            <h3>Mustafa Kamal</h3>
+
+        </div>
 
 
+    </section>
 
+    <div id="last">
+
+        <h1>FOODIE</h1>
+        <h3>Eat Fresh,Be Fresh</h3>
+
+
+        <footer>
+            <p>© Mahedy Hasan 2021, a Programming Hero initiative.</p>
+        </footer>
+
+    </div>
 
 </body>
 
